# speech2text-extension

./: README.md
service/: README.md  REMOTE_SERVER.md  pyproject.toml
service/data/: org.gnome.Shell.Extensions.Speech2Text.xml
service/src/gnome_speech2text_service/: remote_server.py  service.py
src/lib/: dbusManager.js  recordingStateManager.js
src/schemas/: org.gnome.shell.extensions.speech2text.gschema.xml
